--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ar.js-modular": "^1.0.1",
     "core-js": "^3.6.5",
     "nprogress": "^0.2.0",
+    "three": "^0.134.0",
+    "ar-js-org": "https://github.com/AR-js-org/AR.js.git",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vue-vr": "0.0.77"
   },
   "devDependencies": {
+    "@types/three": "^0.134.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
