--- a/package.json
+++ b/package.json
@@ -3,18 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "install-vue": "npm install -g @vue/cli",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start": "npm run install-vue & npm run serve"
+    "start": "npm run serve"
   },
   "dependencies": {
-    "ar.js-modular": "^1.0.1",
     "core-js": "^3.6.5",
     "nprogress": "^0.2.0",
     "three": "^0.134.0",
-    "ar-js-org": "https://github.com/AR-js-org/AR.js.git",
     "vue": "^3.0.0",
     "vue-router": "^4.0.12",
     "vue-vr": "0.0.77"
