--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ar-js-org/ar.js": "3.4.0",
+    "@artcom/react-three-arjs": "0.3.4",
+    "@react-three/fiber": "7.0.19",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "three": "0.134.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
