--- a/package.json
+++ b/package.json
@@ -13,18 +13,14 @@
     "@types/node": "^16.11.47",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "localforage": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
-<<<<<<< HEAD
-    "react-scripts": "^5.0.1",
-=======
     "react-scripts": "5.0.1",
     "three": "0.134.0",
->>>>>>> f79e60e1c307d53b7d5ddf205919cad40191930f
     "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "localforage": "^1.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
