--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@artcom/react-three-arjs": "0.3.4",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.10.0",
     "@react-three/fiber": "7.0.19",
     "@testing-library/jest-dom": "^5.16.5",
