--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.10.0",
+    "@react-three/drei": "^9.22.7",
     "@react-three/fiber": "7.0.19",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
